--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,13 @@
   <script src="/db.js"></script>
   <script src="index.js"></script>
   <script>  
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker.register("service-worker.js")
-      });
-    }
+if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('serviceworker.js').then(function(registration) {
+          console.log('Service worker registered successfully', registration);
+        }).catch(function(err) {
+          console.log('Service worker registration failed: ', err);
+        });
+      };
   </script>
 </body>
 </html>
